--- a/trunk/PaintingThreads/PaintingThreads/PaintingThreads.vcxproj.filters
+++ b/trunk/PaintingThreads/PaintingThreads/PaintingThreads.vcxproj.filters
@@ -19,6 +19,7 @@
     <None Include="app.ico">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="graphlibHTW.dll" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PaintingThreads.cpp">
@@ -33,10 +34,10 @@
     <ClCompile Include="PaintThread.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\ChromaKeyer\ChromaKeyer\ImageLoader.cpp">
+    <ClCompile Include="ImageObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\ChromaKeyer\ChromaKeyer\ImageObject.cpp">
+    <ClCompile Include="ImageLoader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -53,13 +54,16 @@
     <ClInclude Include="PaintThread.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\ChromaKeyer\ChromaKeyer\ImageLoader.h">
+    <ClInclude Include="ImageObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\ChromaKeyer\ChromaKeyer\ImageObject.h">
+    <ClInclude Include="graphlibHTW.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\ChromaKeyer\ChromaKeyer\graphlibHTW.h">
+    <ClInclude Include="HTWStringConverter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ImageLoader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -72,5 +76,8 @@
     <EmbeddedResource Include="Form1.resX">
       <Filter>Resource Files</Filter>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Library Include="graphlibHTW.lib" />
   </ItemGroup>
 </Project>
