--- a/PaintingThreads/PaintingThreads/PaintingThreads.vcxproj
+++ b/PaintingThreads/PaintingThreads/PaintingThreads.vcxproj
@@ -83,12 +83,13 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.ico" />
+    <None Include="graphlibHTW.dll" />
     <None Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\ChromaKeyer\ChromaKeyer\ImageLoader.cpp" />
-    <ClCompile Include="..\..\ChromaKeyer\ChromaKeyer\ImageObject.cpp" />
     <ClCompile Include="AssemblyInfo.cpp" />
+    <ClCompile Include="ImageLoader.cpp" />
+    <ClCompile Include="ImageObject.cpp" />
     <ClCompile Include="PaintingThreads.cpp" />
     <ClCompile Include="PaintThread.cpp" />
     <ClCompile Include="stdafx.cpp">
@@ -97,12 +98,13 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\ChromaKeyer\ChromaKeyer\graphlibHTW.h" />
-    <ClInclude Include="..\..\ChromaKeyer\ChromaKeyer\ImageLoader.h" />
-    <ClInclude Include="..\..\ChromaKeyer\ChromaKeyer\ImageObject.h" />
     <ClInclude Include="Form1.h">
       <FileType>CppForm</FileType>
     </ClInclude>
+    <ClInclude Include="graphlibHTW.h" />
+    <ClInclude Include="HTWStringConverter.h" />
+    <ClInclude Include="ImageLoader.h" />
+    <ClInclude Include="ImageObject.h" />
     <ClInclude Include="PaintThread.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
@@ -115,6 +117,9 @@
       <DependentUpon>Form1.h</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Library Include="graphlibHTW.lib" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
