--- a/trunk/PaintingThreads/PaintingThreads/PaintingThreads.vcxproj.filters
+++ b/trunk/PaintingThreads/PaintingThreads/PaintingThreads.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClInclude Include="ImageLoader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="LockClasses.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="app.rc">
