--- a/PaintingThreads/PaintingThreads/PaintingThreads.vcxproj
+++ b/PaintingThreads/PaintingThreads/PaintingThreads.vcxproj
@@ -22,6 +22,7 @@
     <UseDebugLibraries>true</UseDebugLibraries>
     <CLRSupport>true</CLRSupport>
     <CharacterSet>Unicode</CharacterSet>
+    <UseOfMfc>false</UseOfMfc>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
