lock with semaphores

--- a/PaintingThreads/PaintingThreads/PaintingThreads.vcxproj.filters
+++ b/PaintingThreads/PaintingThreads/PaintingThreads.vcxproj.filters
@@ -37,6 +37,9 @@
     <ClCompile Include="ImageLoader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="QuadrantManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Form1.h">
@@ -64,6 +67,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="LockClasses.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="QuadrantManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
