--- a/trunk/PaintingThreads/PaintingThreads/PaintingThreads.vcxproj
+++ b/trunk/PaintingThreads/PaintingThreads/PaintingThreads.vcxproj
@@ -92,6 +92,7 @@
     <ClCompile Include="ImageLoader.cpp" />
     <ClCompile Include="ImageObject.cpp" />
     <ClCompile Include="PaintingThreads.cpp" />
+    <ClCompile Include="QuadrantManager.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -107,6 +108,7 @@
     <ClInclude Include="ImageObject.h" />
     <ClInclude Include="LockClasses.h" />
     <ClInclude Include="PaintThread.h" />
+    <ClInclude Include="QuadrantManager.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
