--- a/trunk/PaintingThreads/PaintingThreads/PaintingThreads.vcxproj
+++ b/trunk/PaintingThreads/PaintingThreads/PaintingThreads.vcxproj
@@ -20,7 +20,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <CLRSupport>Pure</CLRSupport>
+    <CLRSupport>true</CLRSupport>
     <CharacterSet>Unicode</CharacterSet>
     <UseOfMfc>false</UseOfMfc>
   </PropertyGroup>
@@ -92,7 +92,6 @@
     <ClCompile Include="ImageLoader.cpp" />
     <ClCompile Include="ImageObject.cpp" />
     <ClCompile Include="PaintingThreads.cpp" />
-    <ClCompile Include="QuadrantManager.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -108,7 +107,7 @@
     <ClInclude Include="ImageObject.h" />
     <ClInclude Include="LockClasses.h" />
     <ClInclude Include="PaintThread.h" />
-    <ClInclude Include="QuadrantManager.h" />
+    <ClInclude Include="QuadrantManage.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
